--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -37,7 +37,7 @@
   <div class="panel-heading">秒杀商品详情</div>
   <div class="panel-body">
   	<span id="userTip"> 您还没有登录，请登陆后再操作<br/></span>
-  	<span>没有收货地址的提示。。。</span>
+  	<span>没有收货地址的提示。。。dsafdas  </span>
   </div>
   <table class="table" id="goodslist">
   	<tr>  
@@ -163,7 +163,7 @@ function doMiaosha(path){
 				layer.msg(data.msg);
 			}
 		},
-		error:function(){
+		error:function(){alert(1);
 			layer.msg("客户端请求有误");
 		}
 	});
